# IdeoGraphCO

./: .env.example  .gitignore  CLAUDE.md  README.md  muestra_ideologica.xlsx  pyproject.toml  requirements.txt
configs/: config.yaml
configs/data/: default.yaml
configs/model/: beto.yaml  confliberto.yaml  default.yaml  maria.yaml
configs/trainer/: default.yaml
scripts/: analyze_distribution.py  benchmark.py  clean.py  compare_models.py  filter_articles.py  generate_sample.py  label.py  prepare_splits.py  scraper.py
src/: paths.py
src/benchmark/: __init__.py  registry.py
src/data/: __init__.py  datamodule.py  dataset.py  sources.py
src/data/scraping/: __init__.py  cleaner.py  config.py  db.py  parser.py  robots.py
src/inference/: __init__.py  predictor.py  radar.py
src/labeling/: __init__.py  article_filter.py  codebook.py  judge.py
src/models/: __init__.py  ideovect_model.py
src/training/: train.py
workflows-guide/: 01-scraping.md  02-cleaning.md  03-labeling.md  04-filtering.md  05-sample-export.md  08-benchmark.md  README.md
